# hippocampus

./: .gitignore  INSTALL.ja.md  INSTALL.md  LICENSE  PRIVACY.ja.md  PRIVACY.md  README.ja.md  README.md  compose.yaml  pyproject.toml  requirements.txt  run_connector_oauth.sh  run_wiki_server.sh  secrets.template.yaml
.grok/: config.toml
docker/: Dockerfile.bge
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  BGE_ONDEMAND.ja.md  BGE_ONDEMAND.md  CONNECTOR.ja.md  CONNECTOR.md  DEJA_CODE.md  DIARY.ja.md  DIARY.md  EMBED_CONTRACT.ja.md  EMBED_CONTRACT.md  EXTRACTED_FACTS.ja.md  EXTRACTED_FACTS.md  GHOST_LAYER_USER.ja.md  GHOST_LAYER_USER.md  SECRETS_HARDENED.ja.md  SECRETS_HARDENED.md  WIKI_LAYER.md
migrations/: 001_personal_schema.sql  002_topic_clusters.sql  003_conversation_scoring_columns.sql  003_library_schema.sql  004_library_books_schema.sql  005_last_file_size.sql  006_content_trgm_index.sql  007_conversation_rollup_embed.sql  008_conversation_segments.sql  009_agent_ghost_layer.sql  009_agent_ghost_layer_down.sql  009b_ghost_hnsw.sql  010_ghost_purge_tombstone.sql  011_chassis_id_codex.sql  012_heartbeat_include_partial.sql  013_conversation_project.sql  013_conversation_project_down.sql  014_inject_governance.sql  014_inject_governance_down.sql  015_inject_audit_role.sql  015_inject_audit_role_down.sql  016_inject_lifecycle.sql  016_inject_lifecycle_down.sql  017_post_review_hardening.sql  018_chassis_unknown.sql  018_chassis_unknown_down.sql  018_purge_reason_tombstone.sql  019_dub_action_embed_failure_classes.sql  019_dub_action_embed_failure_classes_down.sql  (+37 more)
(+80 files in other folders)
